# jeffrey-os

./: .editorconfig  .env.example  .git-blame-ignore-revs  .gitcommit_consciousness_final  .gitcommit_msg  .gitignore  .pre-commit-config.yaml  .restorationignore  BOOT_ANALYSIS.md  BRAINKERNEL_INSTALLATION_REPORT.md  BRAIN_ARCHITECTURE.md  BRAIN_V2_COMPLETE.md  CHANGELOG.md  COMPAT_SHIMS.md  COMPLETE_MODULE_REPORT.md  COMPREHENSIVE_DIAGNOSTIC_V2.json  DEPENDENCY_REPORT.md  DIAGNOSTIC_ULTIMATE_RAPPORT.md  DOCUMENTATION_FINAL_REPORT.md  DOCUMENTATION_RECOVERY_REPORT.md  DOCUMENTATION_STATUS.md  Dockerfile  ELEVENLABS_MIGRATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FIXES_REPORT.md  INDENTATION_FIX_REPORT.md  INSTALLATION.md  INTEGRATION_MASTER_PLAN.md  INTEGRATION_MODULES_OUBLIES.md  JEFFREY_OS_ANALYSIS_REPORT.md  JEFFREY_QUALITY_AUDIT.md  JEFFREY_SYNTAX_ERRORS_REPORT.md  MIGRATION_SUMMARY_PHASE2.md  MISSING_MODULES_PRIORITY.md  MODULES_OUBLIES_ICLOUD.md  MODULE_MAPPING.md  Makefile  Makefile_hardened  Makefile_ultimate  NETWORK_VIOLATIONS_PHASE2.md  (+224 more)
Modules oubliés/: adaptive_rotator.py  baseline_tracker.py  causal_predictor.py  delta_analyzer.py  ethical_guard.py  human_interface.py  jeffrey_dreammode_integration.py  neural_mutator.py  performance_optimizer.py  security_scanner.py  threat_assessor.py  variant_generator.py
alembic/: env.py
artifacts/: SHA256SUMS  bundle1.lock.json  inventory_8regions.json  inventory_ultimate.json  inventory_ultimate_bundle3.json  module_cache.json  module_fingerprints.json  smoke_test_results.json  validation_report.json
config/: feature_flags_ultimate.conf  (+6 more)
(+19598 files in other folders)
