[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jeffrey-os"
version = "3.0.0"
description = "Advanced AI Orchestration System with NeuralBus"
requires-python = ">=3.8"
dependencies = [
    "nats-py>=2.7.0",
    "uvloop>=0.19.0",
    "lz4>=4.3.2",
    "orjson>=3.9.10",
    "psutil>=5.9.6",
    "prometheus-client>=0.19.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "aiofiles>=23.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json", "*.txt"]

[tool.black]
line-length = 100
target-version = ["py39"]
extend-exclude = '''
/(
  \.git
| \.venv
| \.mypy_cache
| \.pytest_cache
| __pycache__
| reports
| data
| cache
| build
| dist
| third_party
| migrations
| backups
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 120

# Exclure backups iCloud pour réduire le bruit (8000+ warnings cosmétiques)
extend-exclude = [
  "src/vendors/icloud/**",
  "src/vendors/backups/**",
]

[tool.ruff.lint]
# Focus sur Import, Syntaxe, Pyupgrade pour stabilisation
select = ["F", "E", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
exclude = "src/vendors/"

[tool.pyright]
venvPath = "."
exclude = ["src/vendors/"]
